--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
+                    <annotationProcessors>
+                        <annotationProcessor>
+                            org.adrianwalker.multilinestring.MultilineProcessor
+                        </annotationProcessor>
+                    </annotationProcessors>
                 </configuration>
             </plugin>
             <plugin>
@@ -41,6 +46,13 @@
             <id>clojars.org</id>
             <url>http://clojars.org/repo</url>
         </repository>
+        <repository>
+            <id>bintray</id>
+            <url>http://jcenter.bintray.com</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -58,6 +70,11 @@
             <groupId>jnanomsg</groupId>
             <artifactId>jnanomsg</artifactId>
             <version>0.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.adrianwalker</groupId>
+            <artifactId>multiline-string</artifactId>
+            <version>0.1.1</version>
         </dependency>
     </dependencies>
 </project>
