--- a/circle.yml
+++ b/circle.yml
@@ -20,17 +20,17 @@ test:
   override:
     - |
       set -e
-      # for JV in $JAVA_VERSIONS
-      # do
-        # INIT=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.dagger.init\" }}" $JV)
-        # echo "Calling init = $INIT"
-        # docker run -v $PWD/test:/run/dagger/sift $JV $INIT 0
-        # ls -A $PWD/test/server/site-packages || true
-        # RUN=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.dagger.run\" }}" $JV)
-        # echo "Calling run = $RUN"
-        # docker run -v $PWD/test:/run/dagger/sift -e DRY=true $JV $RUN 0
-        # sudo rm -Rf $PWD/test/server/site-packages || true
-      # done
+      for JV in $JAVA_VERSIONS
+      do
+        INIT=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.dagger.init\" }}" $JV)
+        echo "Calling init = $INIT"
+        docker run -v $PWD/test:/run/dagger/sift $JV $INIT 0
+        ls -A $PWD/test/server/site-packages || true
+        RUN=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.dagger.run\" }}" $JV)
+        echo "Calling run = $RUN"
+        docker run -v $PWD/test:/run/dagger/sift -e DRY=true $JV $RUN 0
+        sudo rm -Rf $PWD/test/server/*.class $PWD/test/server/*.jar
+      done
   
 deployment:
   production:
