--- a/circle.yml
+++ b/circle.yml
@@ -24,11 +24,12 @@ test:
       do
         INIT=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.dagger.init\" }}" $JV)
         echo "Calling init = $INIT"
-        docker run -v $PWD/test:/run/dagger/sift $JV $INIT 0
+        docker run -v $PWD/test:/run/dagger/sift $JV $INIT 0 1 2
         ls -A $PWD/test/server || true
+        ls -A $PWD/test/server/inner || true
         RUN=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.dagger.run\" }}" $JV)
         echo "Calling run = $RUN"
-        docker run -v $PWD/test:/run/dagger/sift -e DRY=true $JV $RUN 0
+        docker run -v $PWD/test:/run/dagger/sift -e DRY=true $JV $RUN 0 1 2
         sudo rm -Rf $PWD/test/server/*.class $PWD/test/server/*.jar || true
       done
   
