--- a/test/server/pom.xml
+++ b/test/server/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.redsift</groupId>
-    <artifactId>compute</artifactId>
+    <artifactId>maven-node</artifactId>
     <version>1.0</version>
-    <name>compute</name>
+    <name>maven-node</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
@@ -15,11 +15,6 @@
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
-                    <annotationProcessors>
-                        <annotationProcessor>
-                            org.adrianwalker.multilinestring.MultilineProcessor
-                        </annotationProcessor>
-                    </annotationProcessors>
                 </configuration>
             </plugin>
             <plugin>
@@ -41,20 +36,12 @@
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>clojars.org</id>
-            <url>http://clojars.org/repo</url>
-        </repository>
-        <repository>
-            <id>bintray</id>
-            <url>http://jcenter.bintray.com</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
     <dependencies>
+        <dependency>
+            <groupId>com.redsift</groupId>
+            <artifactId>compute</artifactId>
+            <version>1.0</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -65,16 +52,6 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.6.3</version>
-        </dependency>
-        <dependency>
-            <groupId>jnanomsg</groupId>
-            <artifactId>jnanomsg</artifactId>
-            <version>0.4.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.adrianwalker</groupId>
-            <artifactId>multiline-string</artifactId>
-            <version>0.1.1</version>
         </dependency>
     </dependencies>
 </project>
