added scala support in Install and Bootstrap.

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,7 @@ machine:
   environment:
     CONTAINER_NAME: quay.io/redsift/sandbox-java
     JAVA_VERSIONS: 8
+    CIRCLE_REVERSE_DEPENDENCIES: sandbox-scala
   pre:
     - sudo curl -L -o /usr/bin/docker 'https://s3-external-1.amazonaws.com/circle-downloads/docker-1.9.0-circleci'
     - sudo chmod 0755 /usr/bin/docker
@@ -53,3 +54,4 @@ deployment:
           docker tag $JV:latest $CONTAINER_NAME:$MAJOR_VERSION
         done
         docker push $CONTAINER_NAME
+      - ./circle_ci_trigger_build
