--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.redsift</groupId>
-    <artifactId>compute</artifactId>
+    <artifactId>sandbox</artifactId>
     <version>1.0</version>
-    <name>compute</name>
+    <name>sandbox</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
