--- a/pom.xml
+++ b/pom.xml
@@ -83,5 +83,10 @@
             <artifactId>multiline-string</artifactId>
             <version>${version.multiline-string}</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 </project>
