--- a/test/server/pom.xml
+++ b/test/server/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.redsift</groupId>
+    <groupId>io.redsift</groupId>
     <artifactId>maven-node</artifactId>
     <version>1.0</version>
     <name>maven-node</name>
@@ -38,7 +38,7 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>com.redsift</groupId>
+            <groupId>io.redsift</groupId>
             <artifactId>compute</artifactId>
             <version>1.0</version>
         </dependency>
