--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,29 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <id>install-jnanomsg</id>
+                        <phase>clean</phase>
+                        <configuration>
+                            <file>${project.basedir}/external/jnanomsg-0.4.4.jar</file>
+                            <repositoryLayout>default</repositoryLayout>
+                            <groupId>jnanomsg</groupId>
+                            <artifactId>jnanomsg</artifactId>
+                            <version>0.4.4</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <properties>
@@ -72,8 +95,6 @@
             <groupId>jnanomsg</groupId>
             <artifactId>jnanomsg</artifactId>
             <version>0.4.4</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/external/jnanomsg-0.4.4.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.adrianwalker</groupId>
