--- a/circle.yml
+++ b/circle.yml
@@ -25,12 +25,12 @@ test:
       do
         INIT=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.sandbox.install\" }}" $JV)
         echo "Calling init = $INIT"
-        docker run -v $PWD/test:/run/dagger/sift $JV $INIT 0 1 2 3
+        docker run -v $PWD/test:/run/sandbox/sift $JV $INIT 0 1 2 3
         ls -A $PWD/test/server/classes/java || true
         ls -A $PWD/test/server/inner/classes/java || true
         RUN=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.sandbox.run\" }}" $JV)
         echo "Calling run = $RUN"
-        docker run -v $PWD/test:/run/dagger/sift -e DRY=true $JV $RUN 0 1 2 3
+        docker run -v $PWD/test:/run/sandbox/sift -e DRY=true $JV $RUN 0 1 2 3
         sudo rm -Rf $PWD/test/server/classes $PWD/test/server/inner/classes || true
       done
 
