--- a/circle.yml
+++ b/circle.yml
@@ -23,12 +23,12 @@ test:
       set -e
       for JV in $JAVA_VERSIONS
       do
-        INIT=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.sandbox.install\" }}" $JV)
+        INIT=$(docker inspect -f "{{index .Config.Labels \"io.redsift.sandbox.install\" }}" $JV)
         echo "Calling init = $INIT"
         docker run -v $PWD/test:/run/sandbox/sift $JV $INIT 0 1 2 3
         ls -A $PWD/test/server/classes/java || true
         ls -A $PWD/test/server/inner/classes/java || true
-        RUN=$(docker inspect -f "{{index .ContainerConfig.Labels \"io.redsift.sandbox.run\" }}" $JV)
+        RUN=$(docker inspect -f "{{index .Config.Labels \"io.redsift.sandbox.run\" }}" $JV)
         echo "Calling run = $RUN"
         docker run -v $PWD/test:/run/sandbox/sift -e DRY=true $JV $RUN 0 1 2 3
         sudo rm -Rf $PWD/test/server/classes $PWD/test/server/inner/classes || true
