--- a/circle.yml
+++ b/circle.yml
@@ -44,6 +44,7 @@ deployment:
       - docker login -e $QUAY_EMAIL -u $QUAY_USER -p $QUAY_PASS quay.io
       - |
         set -e
+        latest=""
         for JV in $JAVA_VERSIONS
         do
           JAVA_VERSION=$(docker run -u 7438:7438 -t --entrypoint=/usr/bin/java $JV -version 2>&1 | cut -s -d '"' -f2)
@@ -55,6 +56,9 @@ deployment:
           docker tag $JV:latest $CONTAINER_NAME:$VERSION
           echo "Tagging as $CONTAINER_NAME:$MAJOR_VERSION"
           docker tag $JV:latest $CONTAINER_NAME:$MAJOR_VERSION
+          latest=$JV:latest
         done
+        echo "Tagging $latest as $CONTAINER_NAME:latest"
+        docker tag $latest $CONTAINER_NAME:latest
         docker push $CONTAINER_NAME
       - ./circle_ci_trigger_build
