--- a/circle.yml
+++ b/circle.yml
@@ -33,7 +33,7 @@ test:
         ls -A $PWD/test/server/inner/classes/java || true
         RUN=$(docker inspect -f "{{index .Config.Labels \"io.redsift.sandbox.run\" }}" $JV)
         echo "Calling run = $RUN"
-        docker run -u 7438:7438 -v $PWD/test:/run/sandbox/sift -e DRY=true $JV $RUN 0 1 2 3
+        docker run -u 7438:7438 -v $PWD/test:/run/sandbox/sift:ro -e DRY=true $JV $RUN 0 1 2 3
         sudo rm -Rf $PWD/test/server/classes $PWD/test/server/inner/classes || true
       done
 
