--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,8 @@ commands:
           root: ./
           paths:
             - circle
+      - deploy:
+          command: docker push $CONTAINER_NAME
 
 jobs:
   build_default:
